infrastructure/k8s/linksy-ingress-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: rke2-ingress-nginx-lb
  namespace: kube-system
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: rke2-ingress-nginx
    app.kubernetes.io/component: controller
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
